        Guild.m_WarInvitations, Guild.m_AllyDeclarations,
        Guild.m_AllyInvitations, Guild.m_Candidates, Guild.m_Accepted
      - Account.m_Comments, Account.m_Tags
    - use XmlReader instead of XmlDocument.Load() to parse the accounts file
    - use DateTime.Now cache
    - removed from Notoriety: CheckAggressor(), CheckAggressed()
  * extended API for optimization
    - Mobile: added AggressorsOrNull, FindAggressorByAttacker(),
      FindAggressorByDefender(), AggressedOrNull, FindAggressedByAttacker(),
      FindAggressedByDefender(), Peaceful
    - Mobile.Stabled: HasStabled(), AddStabled(), RemoveStabled(),
      StabledOrNull
    - Mobile.VisibilityList: ClearVisibilityList()
    - Mobile.PermaFlags: HasPermaFlags(), IsPermaFlaggedTo()
  * gameplay related bugfixes
    - blank keys should not be able to unlock doors with KeyValue 0 (patch
      from Kai Sassmannshausen)
    - check CanBeHarmful() in WhirlwindAttack
    - fixed PlayerVendor cash bug, thanks to pmb
  * moved into separate script libraries:
    - Engines.MyRunUO
    - Engines.Reports
    - Engines.RemoteAdmin
  * upgraded log4net to 1.2.10
  * imported RunUO data and saves directory

 --

sunuo (0.3.1) unstable; urgency=low

  * optimizations in the serialization code
    - cache position in BinaryFileWriter
    - sealed the serialization classes
    - enlarged BinaryFileWriter's buffer to 32kB
  * removed BinaryFileWriter.UnderlyingStream
  * BinaryFileWriter.Flush() is private
  * Mobile: better SkillMod==null handling

 -- Max Kellermann <max@duempel.org>  Wed,  8 Feb 2006 23:26:45 +0100

sunuo (0.3.0) unstable; urgency=low

  * distribute log4net.dll
  * removed the --logfile option
  * use log4net in exception handlers and more
  * load legacy scripts from local/src and local/lib if present
  * moved main BaseDirectory declaration to Config
  * configure config file and base directory on the command line
  * command line arguments are no longer case insensitive